Website About Erik

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <head>
     <title>Website About Erik</title>
 </head>
-<body> <p><h1>My name is Erik Mercado and this is a website all about me.</h1></p>
+<body style="background-color:Cyan"> <p><h1 style="color:Blue">My name is Erik Mercado and this is a website all about me.</h1></p>
 <img src="https://mail.google.com/mail/u/0?ui=2&ik=4f50bd771a&attid=0.1&permmsgid=msg-a:r1600469015615234023&th=194ae3a389023992&view=fimg&fur=ip&permmsgid=msg-a:r1600469015615234023&sz=s0-l75-ft&attbid=ANGjdJ-f_zGuyi9CD_9JL8bu95G4U3xkgyO-Ecd_0mZ61E34r6FSh_aHzC_tqSEU2gGjE-h7fJygh-BPBywSZBhXAJgY1P3zGEgPD87bC_mIChgS7nhL2QBlcXjJkRM&disp=emb&realattid=ii_194ae3a26feeca517551&zw" width="200px">
-<h4><ul>
+<ul style="color:blue; font-weight: bold;">
     <li>I am a 15 year old student that goes to Pueblo High School and a sophomore.</li>
     <li>I am a varsity football player for Pueblo High School.</li>
     <li>I love to play videogames as a pass time when I have nothing else to do.</li>
     <li>I love to eat different types of foods when im hungry.</li>
     <li>I am 6'2 and a half which is above the Amercan average for height.</li>
-</ul></h4>
-
-<table border="1">
+</ul>
+<p>
+    <h2>Daily Schedule</h2>
+</p>
+<table border="1" style="color:blue">
     <tr>
         <th>Sunday</th>
         <th>Monday</th>
@@ -24,17 +26,25 @@
     </tr>
     <tr>
         <td>Sleep and eat as much food</td>
-        <td>Go to school and practice</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Go to school and speed training</td>
+        <td>Go to school and practice football</td>
+        <td>Go to school and then study hall</td>
+        <td>Go to school and speed training</td>
+        <td>Go to school and football practice</td>
+        <td>Stay home and clean</td>
     </tr>
 
 </table>
-
-
-
-
+<h2>Favorite foods</h2>
+<p>
+    <ul>
+        <li><img src="https://as2.ftcdn.net/v2/jpg/06/05/90/65/1000_F_605906555_WQ7DuSkjSZjuPSLsw7mEiwNMr8j8k3U7.jpg" width="200px"> Green Corn Tamales</li>
+        <h6> Source: Malika, Homemade Corn Tamales, stock.adobe.com (<a href="https://stock.adobe.com/605906555?clickref=1101lAevLosB&mv=affiliate&mv2=pz&as_camptype=&as_channel=affiliate&as_source=partnerize&as_campaign=pkrat"> Green Corn Tamales)</a></h6>
+        <li><img src="https://www.publicdomainpictures.net/pictures/30000/velka/fried-chicken.jpg" width="200px"> Fried chicken</li>
+        <h6> Source: Maliz Ong, Publicdomainpictures.net (<a href="https://www.publicdomainpictures.net/en/view-image.php?image=27198&picture=fried-chicken"> Fried chicken )</a></Publicdomainpictures></h6>
+        <li><img src="https://as1.ftcdn.net/v2/jpg/06/13/68/98/1000_F_613689836_i6iE3ukLLxYgDMzZDqLDxSse8o5LR4QS.jpg" width="200px"> Spaghetti and Meatballs</li>
+        <h6>Source: Noah, Spaghetti and meatballs, Stock.adobe.com (<a href="https://stock.adobe.com/613689836?clickref=1100lA5QuF4B&mv=affiliate&mv2=pz&as_camptype=&as_channel=affiliate&as_source=partnerize&as_campaign=vkra"> Spaghetti and Meatballs)</a></h6>
+    </ul>
+</p>
+<a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&pp=ygUJcmljayByb2xs"> DONT PRESS THIS LINK!!</a>
 </body>
